# s28ypt

./: Makefile.am  README.md  configure.ac
experimental/: boxgen.cc  s28.cc  s28box.h  sha1.cc
src/: Makefile.am  aes.h  archiver.h  array.h  cbc.h  checks.h  cyp.cc  error.h  errorcodes.h  file.cc  file.h  header28.h  keyfactory.h  portable-endian.h  safemem.cc  safemem.h  serializer.cc  serializer.h  sha256.h  textutils.cc  textutils.h
